<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.scorer.SoccerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/teamA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:hint="@string/team_name"
            android:inputType="textCapWords"
            android:textSize="20sp" />

        <Button
            android:id="@+id/goalA"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_below="@id/teamA"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:onClick="goalA"
            android:text="@string/goal"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/goalValueA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/teamA"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/goalA"
            android:text="0"
            android:textSize="35sp" />

        <Button
            android:id="@+id/penaltyA"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_below="@id/goalA"
            android:layout_alignParentLeft="true"
            android:onClick="penaltyA"
            android:text="@string/penalty"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/penaltyValueA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/goalA"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/penaltyA"
            android:text="0"
            android:textSize="35sp" />

        <Button
            android:id="@+id/cornerA"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_below="@id/penaltyA"
            android:layout_alignParentLeft="true"
            android:onClick="cornerA"
            android:text="@string/corner_kick"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/cornerValueA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/penaltyA"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/cornerA"
            android:text="0"
            android:textSize="35sp" />

        <Button
            android:id="@+id/foulsA"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_below="@id/cornerA"
            android:layout_alignParentLeft="true"
            android:onClick="foulsA"
            android:text="@string/lack"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/foulsValueA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cornerA"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/foulsA"
            android:text="0"
            android:textSize="35sp" />

        <Button
            android:id="@+id/yellowA"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_below="@id/foulsA"
            android:layout_alignParentLeft="true"
            android:onClick="yellowA"
            android:text="@string/yellow_card"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/yellowValueA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/foulsA"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/yellowA"
            android:text="0"
            android:textSize="35sp" />

        <Button
            android:id="@+id/redA"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_below="@id/yellowA"
            android:layout_alignParentLeft="true"
            android:onClick="redA"
            android:text="@string/red_card"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/redValueA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/yellowA"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/redA"
            android:text="0"
            android:textSize="35sp" />
    </RelativeLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_above="@id/reset"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/category_soccer" />

    <Button
        android:id="@+id/reset"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="reset"
        android:text="@string/reset"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/teamB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:hint="@string/team_name"
            android:inputType="textCapWords"
            android:textSize="20sp" />

        <Button
            android:id="@+id/goalB"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_below="@id/teamB"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:onClick="goalB"
            android:text="@string/goal"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/goalValueB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/teamB"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/goalB"
            android:text="0"
            android:textSize="35sp" />

        <Button
            android:id="@+id/penaltyB"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_below="@id/goalB"
            android:layout_alignParentRight="true"
            android:onClick="penaltyB"
            android:text="@string/penalty"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/penaltyValueB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/goalB"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/penaltyB"
            android:text="0"
            android:textSize="35sp" />

        <Button
            android:id="@+id/cornerB"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_below="@id/penaltyB"
            android:layout_alignParentRight="true"
            android:onClick="cornerB"
            android:text="@string/corner_kick"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/cornerValueB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/penaltyB"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/cornerB"
            android:text="0"
            android:textSize="35sp" />

        <Button
            android:id="@+id/foulsB"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_below="@id/cornerB"
            android:layout_alignParentRight="true"
            android:onClick="foulsB"
            android:text="@string/lack"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/foulsValueB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cornerB"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/foulsB"
            android:text="0"
            android:textSize="35sp" />

        <Button
            android:id="@+id/yellowB"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_below="@id/foulsB"
            android:layout_alignParentRight="true"
            android:onClick="yellowB"
            android:text="@string/yellow_card"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/yellowValueB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/foulsB"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/yellowB"
            android:text="0"
            android:textSize="35sp" />

        <Button
            android:id="@+id/redB"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_below="@id/yellowB"
            android:layout_alignParentRight="true"
            android:onClick="redB"
            android:text="@string/red_card"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/redValueB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/yellowB"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/redB"
            android:text="0"
            android:textSize="35sp" />
    </RelativeLayout>
</RelativeLayout>